dspace/modules/xmlui-mirage2/src/main/webapp/themes/ukuk_publications/styles/_style.scss
/**
 * The contents of this file are subject to the license and copyright
 * detailed in the LICENSE and NOTICE files at the root of the source
 * tree and available online at
 *
 * http://www.dspace.org/license/
 */

/**
 * You can put your own style in this file.
 * It will be included in all color schemes
 */

//example mixin to set the text-selection style
@mixin selection {
    ::-moz-selection { @content; }
    ::selection { @content; }
}

@include selection {
    color: white;
    background: hotpink;
}

.publication-records-modal, .publication-records-modal ul {
  list-style-type: none;
  padding-left: 0px;
}

.publication-records-import-btn {
  margin: 5px 0px 15px 0px;
}

.bold {
  font-weight: bold;
}

.imported {
  background-color: #E2E2E2;
}

#aspect_submission_StepTransformer_div_StartSubmissionLookupStep {

  #aspect_submission_StepTransformer_field_search {
    width: 81%;
    display: inline;
  }

  #aspect_submission_StepTransformer_field_lookup {
    width:19%
  }

  .modal .modal-body {
    max-height: 500px;
    overflow-y: auto;
  }

  #aspect_submission_StepTransformer_item_publication-title{
    margin-bottom:5px;
  }
}

// Issue with homepage display being stretched out

.horizontal-slider {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    flex-wrap: wrap;
    #main-content, #sidebar {
        display: flex;
        flex-direction: column;
    }
}

// Skip link
.main-content-tabber, .main-content-tabber:hover {
	position: absolute;
	top: 0;
	left: 0;
	color: transparent;
}

.main-content-tabber:focus, .main-content-tabber:active {
	color: #b72c32;
}

